WebContent/JavaScript/ui/LASUI.css
body {
font: 70% "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
}
a {
color: #436976;
background-color: transparent;
}
p {
margin: 0 0 0.75em 0;
line-height: 1.5em;
}
h1 {
font-size: 160%;
}
h2 {
font-size: 150%;
}
h3 {
font-size: 125%;
border-bottom: none;
font-weight: bold;
}
h4 {
font-size: 110%;
border-bottom: none;
font-weight: bold;
}
h5 {
font-size: 100%;
border-bottom: none;
font-weight: bold;
}
h6 {
font-size: 85%;
border-bottom: none;
font-weight: bold;
}
.LASUIMask {
	position:absolute;
	top:0pt;
	left:0pt;
	width:100%;
	height:100%;
	z-index:4;
	background-color:black;
	filter : alpha(opacity=10);
	opacity : 0.50;
}
.LASLink {
	color : #5c731e;
	text-decoration : underline;
	cursor : pointer;
	font-weight: bold;
}
.LASLink:hover {
	color : #c30;
	text-decoration : none;
	font-weight: bold;
}
.LASTreeULNode { 
	margin-left:6pt;
	padding-left:6pt;
	margin-top:0;
	padding-top:0;
	margin-bottom:0;
	padding-bottom:0;
}
.LASTreeLINode {
	list-style-type : none;
	padding :0;
	margin-right : 0;   
}
.LASPlotCategory { 
	color: #c30;
	line-height: 1.85em;
	text-transform: uppercase;
	margin-top:20;
	padding-top: 20;
	list-style-type : none;
	margin-left:2pt;
	padding-left:0pt;
	margin-bottom:0;
	padding-bottom:0;
}
.LASPlotType {
	line-height: 1.5em;
	list-style-type : none;
	padding :0;
	margin-left : 2pt;
	margin-right : 0;	
}

.LASTreeTitleNode {		
	cursor : pointer;
	vertical-align : middle;
}
.LASTreeIMGNode {
	cursor : pointer;
}

.LASTreeTableCell {
	cursor : pointer;
	text-align:left;
	vertical-align:top;
	padding:0;
	margin:0;
}

.LASTreeTableNode {
	cursor : pointer;
	padding:0;
	margin:0;
}
.LASMetadataDIVNode {
	position : absolute;
	margin: 12px;
	padding: 8px;
	background-color : white;
	border-top: 1px solid #666;
	border-left: 1px solid #666;
	border-right: 3px solid #999;   
	border-bottom: 3px solid #999;
	z-index : 6;
}
.LASMetadataTableNode {
	background-color : white;
	border: 1pt solid #436976;
	cell-spacing:0;
	cell-padding:4;
	z-index : 9;
	margin: 6px;
}

.LASCancelButton {
	cursor:pointer;
	position:absolute;
	top :0pt;
	right:0pt;
	background-color: grey;
}
.LASPopupDIVNode {
	position:absolute;
	left:100px;
	top:100px;
	background-color : white;
	border : 2pt solid black;
	border-color: #5c731e;
	padding : 8pt;
	margin : 8pt;
	z-index : 6;
	width:600px;
}

.LASTitleTextNode {
	font-family:arial;
	color : white;
	font-size:40pt;
	font-size-adjust:none;
}
.LASProductButton  {
	padding: 3px 4px 3px 4px;
	font-size: .9em;
	font-style: bold;
	background-color: #DCDCDC;
}

.leftNav {
	border-top: 3px solid #436976;
	border-left: 1px solid #436976;
	border-right: 3px solid #436976;
	border-bottom: 3px solid #436976;

}
.LASSelectNode {
}

.LASOptionNode {
}

.LASTextInputNode {
}

.LASRadioInputNode {
}

.LASCheckboxInputNode {
}

